<resources>
    <string name="app_name">D&amp;D 3.5 Character</string>
    <string name="prefs_file">com.lavendergoons.dndcharacter.SHARED_PREFS</string>
    <string name="title_activity_character_list">CharactersListActivity</string>
    <string name="title_activity_character_nav_drawer">CharacterNavDrawerActivity</string>
    <string name="title_list_characters">Characters</string>
    <string name="title_fragment_abilities">Abilities</string>
    <string name="title_fragment_about">About</string>
    <string name="title_fragment_attributes">Attributes</string>
    <string name="title_fragment_armor">Armor</string>
    <string name="title_fragment_attacks">Attacks</string>
    <string name="title_fragment_feats">Feats</string>
    <string name="title_fragment_items">Items</string>
    <string name="title_fragment_spells">Spells</string>
    <string name="title_fragment_skills">Skills</string>
    <string name="title_fragment_notes">Notes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="edit">Edit</string>
    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="about">About</string>
    <string name="about_title_colon">About:</string>
    <string name="about_content">
        The D&amp;D 3.5 Character sheet app lets users store all aspects of their D&amp;D 3.5 Characters.
        \n\nNote: This app is in an initial release state, with new features and performance improvements planned for future updates.
    </string>
    <string name="about_art">Art:</string>
    <string name="about_nolan">Icon provided by Nolan Snow (Nolsworld).</string>
    <string name="about_instagram_title">Nolsworld Instagram:</string>
    <string name="about_instagram_link">https://www.instagram.com/nolsworld/</string>
    <string name="about_issues">Issues/Suggestions:</string>
    <string name="about_issues_content">To report any issues or make suggestions, please email:</string>
    <string name="about_issues_email">lavenderdevelopment@gmail.com</string>
    <string name="announcement_title">Announcement</string>
    <string name="announcement_notes">Notes</string>
    <string name="announcement_changelog">Change-Log</string>
    <string name="announcement_first_open_message">Thank you for trying out the The D&amp;D 3.5 Character sheet app.
        \n\nNote: \nThis app is in an initial release state, with new features and performance improvements planned for future updates.
        \n\nPlanned Features Include:
        \n&#8226;Auto Adding of Skills and Abilities
        \n&#8226;Expanded Character Sections (Languages, Feats, Money, Animal Companion)
        \n&#8226;Google Account Login (Remote Character Saving)
        \n&#8226;Various Usability Fixes
        \n&#8226;Theme Support
        \n\nFor more information please see the about page.
    </string>
    <string name="announcement_first_open_message_list">Thank you for trying out the The D&amp;D 3.5 Character sheet app.
        \n\nNote: \nThis app is in an initial release state, with new features and performance improvements planned for future updates.
        \n\nPlanned Features Include:
        <ul>
            <li>\n&#8226;Auto Adding of Skills and Abilities</li>
            <li>\n&#8226;Expanded Character Sections (Languages, Feats, Money, Animal Companion)</li>
            <li>\n&#8226;Google Account Login (Remote Character Saving)</li>
            <li>\n&#8226;Various Usability Fixes</li>
            <li>\n&#8226;Theme Support</li>
        </ul>
        \n\nFor more information please see the about page.
    </string>
    <string name="warning_enter_required_fields">Please Enter All Required Fields</string>
    <string name="warning_database_not_initialized">Database not initialized</string>
    <string name="confirm_delete_armor">Are you sure you want to delete this armor?</string>
    <string name="confirm_delete_item">Are you sure you want to delete this item?</string>
    <string name="confirm_delete_attack">Are you sure you want to delete this attack?</string>
    <string name="confirm_delete_spell">Are you sure you want to delete this spell?</string>
    <string name="confirm_delete_character">Are you sure you want to delete this simpleCharacter?</string>
    <string name="confirm_delete_note">Are you sure you want to delete this note?</string>
    <string name="confirm_delete_feat">Are you sure you want to delete this feat?</string>
    <string name="gen_weight">Weight</string>
    <string name="gen_speed">Speed</string>
    <string name="gen_quantity">Quantity</string>
    <string name="gen_total">Total</string>
    <string name="gen_mod">Mod</string>
    <string name="gen_rank">Rank</string>
    <string name="gen_misc">Misc</string>
    <string name="gen_score">Score</string>
    <string name="gen_base">Base</string>
    <string name="gen_range">Range</string>
    <string name="gen_time">Time</string>
    <string name="gen_type">Type</string>
    <string name="gen_duration">Duration</string>
    <string name="gen_grapple">Grapple</string>
    <string name="gen_hp">Hp</string>
    <string name="gen_non_lethal_n">Non\nLethal</string>
    <string name="gen_non_lethal">Non Lethal</string>
    <string name="gen_base_attack_short">Base Atk.</string>
    <string name="gen_base_attack">Base Attack</string>
    <string name="gen_initiative">Initiative</string>
    <string name="gen_platinum">Platinum</string>
    <string name="gen_gold">Gold</string>
    <string name="gen_silver">Silver</string>
    <string name="gen_copper">Copper</string>
    <string name="label_add_character_btn">Add Character</string>
    <string name="label_nav_drawer_attributes">Attributes</string>
    <string name="label_nav_drawer_abilities">Abilities</string>
    <string name="label_nav_drawer_feats">Feats</string>
    <string name="label_nav_drawer_skills">Skills</string>
    <string name="label_nav_drawer_items">Items</string>
    <string name="label_nav_drawer_attacks">Attacks</string>
    <string name="label_nav_drawer_animals">Animals</string>
    <string name="label_nav_drawer_spells">Spells</string>
    <string name="label_nav_drawer_armor">Armor</string>
    <string name="label_nav_drawer_notes">Notes</string>
    <string name="label_layout_ac_bonus">AC\nBonus</string>
    <string name="label_layout_max_dex">Max\nDex</string>
    <string name="label_layout_check_penalty">Check\nPenalty</string>
    <string name="label_layout_ability_mod">Ability\nMod</string>
    <string name="label_layout_magic_mod">Magic\nMod</string>
    <string name="label_layout_misc_mod">Misc\nMod</string>
    <string name="label_layout_temp_mod">Temp\nMod</string>
    <string name="title_add_character">Add Character</string>
    <string name="title_action_settings">Settings</string>
    <string name="title_generic_confirm">Are you sure?</string>
    <string name="title_armor_dialog">Armor Details</string>
    <string name="title_ac_dialog">AC Details</string>
    <string name="title_saves_dialog">Saves Details</string>
    <string name="title_scores_dialog">Scores Details</string>
    <string name="title_items_general_dialog">Item Details</string>
    <string name="title_attack_dialog">Attack Details</string>
    <string name="title_spell_dialog">Create New Spell</string>
    <string name="title_note_dialog">Create New Note</string>
    <string name="title_select_feat_type">Select Feat Type</string>
    <string name="hint_name">Name</string>
    <string name="hint_level">Level</string>
    <string name="hint_skill_checkbox">SkillName</string>
    <string name="hint_skill_mod">MOD</string>
    <string name="hint_total">Total</string>
    <string name="hint_rank">Rank</string>
    <string name="hint_misc">Misc</string>
    <string name="hint_enter_craft">Enter Craft</string>
    <string name="hint_enter_profession">Enter Profession</string>
    <string name="hint_enter_perform">Enter Perform</string>
    <string name="hint_enter_knowledge">Enter Knowledge</string>
    <string name="hint_properties">Properties</string>
    <string name="tag_add_character_dialog">ADD_CHARACTER_DIALOG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="feat_type_items">
        <item>Feat</item>
        <item>Special Ability</item>
        <item>Language</item>
    </string-array>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="ten">10</string>
    <string name="ability_str">STR</string>
    <string name="ability_dex">DEX</string>
    <string name="ability_con">CON</string>
    <string name="ability_int">INT</string>
    <string name="ability_wis">WIS</string>
    <string name="ability_cha">CHA</string>
    <string name="ac_gen">AC</string>
    <string name="ac_default">Default</string>
    <string name="ac_touch">Touch</string>
    <string name="ac_flat_foot">Flat-Footed</string>
    <string name="ac_shield">Shield</string>
    <string name="ac_dex">Dex</string>
    <string name="ac_size">Size</string>
    <string name="ac_natural">Natural</string>
    <string name="ac_deflection">Deflection</string>
    <string name="armor_name">Armor</string>
    <string name="armor_type">Type</string>
    <string name="armor_ac_bonus">AC Bonus</string>
    <string name="armor_max_dex">Max Dex</string>
    <string name="armor_check_penalty">Check Penalty</string>
    <string name="armor_spell_failure">Spell Failure</string>
    <string name="armor_properties">Properties</string>
    <string name="attack_name">Attack</string>
    <string name="attack_bonus_short">Atk. Bonus</string>
    <string name="attack_bonus_long">Attack Bonus</string>
    <string name="attack_damage">Damage</string>
    <string name="attack_critical">Critical</string>
    <string name="attack_range">Range</string>
    <string name="attack_type">Type</string>
    <string name="attack_ammo">Ammo</string>
    <string name="attr_name">Name</string>
    <string name="attr_class">Class</string>
    <string name="attr_level">Level</string>
    <string name="attr_experience">XP</string>
    <string name="attr_race">Race</string>
    <string name="attr_align">Alignment</string>
    <string name="attr_deity">Deity</string>
    <string name="attr_size">Size</string>
    <string name="attr_age">Age</string>
    <string name="attr_gender">Gender</string>
    <string name="attr_height">Height</string>
    <string name="attr_weight">Weight</string>
    <string name="attr_eyes">Eyes</string>
    <string name="attr_hair">Hair</string>
    <string name="attr_skin">Skin</string>
    <string name="grapple_base_attack">Base Atk.</string>
    <string name="grapple_str_mod">STR Mod.</string>
    <string name="grapple_size_mod">Size Mod</string>
    <string name="grapple_misc_mod">Misc Mod</string>
    <string name="save_fortitude">Fortitude</string>
    <string name="save_reflex">Reflex</string>
    <string name="save_will">Will</string>
    <string name="skill">Skill</string>
    <string name="skill_appraise">Appraise</string>
    <string name="skill_balance">Balance</string>
    <string name="skill_bluff">Bluff</string>
    <string name="skill_climb">Climb</string>
    <string name="skill_concentration">Concentration</string>
    <string name="skill_craft">Craft</string>
    <string name="skill_decipher_script">Decipher Script</string>
    <string name="skill_diplomacy">Diplomacy</string>
    <string name="skill_disable_device">Disable Device</string>
    <string name="skill_disguise">Disguise</string>
    <string name="skill_escape_artist">Escape Artist</string>
    <string name="skill_forgery">Forgery</string>
    <string name="skill_gather_info">Gather Info</string>
    <string name="skill_handle_animal">Handle Animal</string>
</resources>