<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/cardview_separator_margin"
        card_view:cardCornerRadius="@dimen/cardview_default_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cardview_half_horizontal_margin"
            android:layout_marginTop="@dimen/cardview_half_vertical_margin"
            android:layout_marginBottom="@dimen/cardview_half_vertical_margin"
            android:layout_marginEnd="@dimen/cardview_half_horizontal_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/armor_name"
                android:id="@+id/cardArmorName"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/armor_type"
                android:id="@+id/cardArmorType"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/cardArmorName"
                android:layout_marginStart="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/armor_ac_bonus"
                android:id="@+id/cardArmorAC"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/cardArmorType"
                android:layout_marginStart="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/armor_max_dex"
                android:id="@+id/cardArmorDex"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/cardArmorAC"
                android:layout_marginStart="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/armor_check_penalty"
                android:id="@+id/cardArmorCheck"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/cardArmorDex"
                android:layout_marginStart="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/armor_spell_failure"
                android:id="@+id/cardArmorSpell"
                android:layout_below="@+id/cardArmorName"
                android:layout_alignParentStart="true"
                android:layout_marginTop="14dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gen_speed"
                android:id="@+id/cardArmorSpeed"
                android:layout_alignBottom="@+id/cardArmorSpell"
                android:layout_toEndOf="@+id/cardArmorType"
                android:layout_marginStart="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gen_weight"
                android:id="@+id/cardArmorWeight"
                android:layout_alignBottom="@+id/cardArmorSpeed"
                android:layout_toEndOf="@+id/cardArmorSpeed"
                android:layout_marginStart="12dp"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>